--- a/frontend/src/Components/Navbar.css
+++ b/frontend/src/Components/Navbar.css
@@ -4,11 +4,19 @@
 .nav-links{
     display: flex;
     list-style: none;
-    gap: 30px;
-    margin-left: 720px;
+    gap: 25px;
+    margin-left: 700px;
     margin-top: 25px;
-    margin-right: 15px;
+    /* margin-right: 15px; */
+    /* color: white; */
 }
+.nav-links li a {
+    color: white;  /* Ensures links are white */
+    text-decoration: none; /* Removes underline */
+    font-size: 18px;
+    font-weight: 500;
+}
+
 .nav-title{
     margin-left: 30px;
 }
@@ -27,9 +35,10 @@
     left: 0;
     width: 100%;  /* Full width */
     height: 60px;  /* Set height as needed */
-    background-color: black;
+    background: rgba(0, 0, 0, 0.2);
     display: flex;
     align-items: center;
     padding: 0 20px;  /* Add padding for spacing */
     z-index: 1000; /* Ensure it's above other elements */
+    /* backdrop-filter: blur(10px); */
 }
