--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -74,3 +74,14 @@ button:focus-visible {
     background-color: var(--button-background-color-light);
   }
 } */
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+body::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+body {
+  -ms-overflow-style: none;  /* IE and Edge */
+  scrollbar-width: none;     /* Firefox */
+}
